Ahora hay páginas

--- a/config/locales/es.activerecord.yml
+++ b/config/locales/es.activerecord.yml
@@ -1,6 +1,9 @@
 es:
   activerecord:
     models:
-      publication: 'publicación'
-      user: 'usuaria'
+      group: 'ficción'
+      page: 'página'
+      seed: 'semilla'
+      user: 'participante'
+      
 
