--- a/config/locales/es.simple_form.yml
+++ b/config/locales/es.simple_form.yml
@@ -24,6 +24,10 @@ es:
         description: 'Descripción'
         body: 'Texto'
 
+      user:
+        password: 'Contraseña'
+        password_confirmation: 'Repite la contraseña'
+
     hints:
       seed:
         body: 'Puedes usar markdown'
