--- a/config/locales/es.activerecord.yml
+++ b/config/locales/es.activerecord.yml
@@ -5,5 +5,7 @@ es:
       page: 'página'
       seed: 'semilla'
       user: 'participante'
+      chapter: 'capítulo'
+      scene: 'escena'
       
 
