--- a/config/locales/es.activerecord.yml
+++ b/config/locales/es.activerecord.yml
@@ -6,6 +6,8 @@ es:
       seed: 'semilla'
       user: 'participante'
       chapter: 'capítulo'
+      character: 'personaje'
+      pedia: 'entrada a la enciclopedia'
       scene: 'escena'
       
 
