--- a/config/locales/es.simple_form.yml
+++ b/config/locales/es.simple_form.yml
@@ -31,6 +31,10 @@ es:
       chapter:
         summary: 'Resúmen'
 
+      character:
+        title: 'Nombre'
+        content: 'Descripción'
+
     hints:
       chapter:
         summary: 'Tienes 500 caracteres.'
